# math-service

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  deploy.sh  index.html
math-service/: Cargo.toml
mathgen/: Cargo.toml
mathgen/src/: math.rs
paint-math/: Cargo.toml
paint-math/src/: main.rs  paint.rs
paint-service/: Cargo.toml
paint-service/src/: main.rs  models.rs  schema.rs
src/: lib.rs  main.rs  math.rs  paint-math.rs  paint.rs  paint_math.rs
