[package]
name = "mathgen"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
edition = "2018"

[[bin]]
name = "paint-math"
path = "src/paint_math.rs"

[[bin]]
name = "paint-service"
path = "src/main.rs"

[features]
default = ["local"]

local = []
service = []

[dependencies]
clap = "*"
cairo-rs = {version = "0.6", features = ["png", "pdf"]}
rand = "0.6"
actix-web = "0.7"
env_logger = "0.5"
dotenv = "0.13"
log = "0.4"

diesel = {version = "1.0", features = ["postgres", "sqlite"]}

r2d2 = "0.8.2"
r2d2-diesel = "1.0.0"

serde = "*"
serde_derive = "*"

futures = "*"
