[package]
name = "paint-math"
version = "0.1.0"
authors = ["Sian Cao <yinshuiboy@gmail.com>"]
edition = "2021"

[lib]
name = "paint_math"
path = "src/lib.rs"

[dependencies]
mathgen = { path = "../mathgen" }
cairo-rs = {version = "0.6", features = ["png", "pdf"]}
rand = "0.6"
log = "0.4"
dotenv = "*"
